--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.8",
+        "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/options-resolver": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "config": {
