--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
@@ -70,5 +70,7 @@
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.29"
-    }
+    },
+    "name": "eredost/bilemo",
+    "description": "API providing the BileMo product catalog"
 }
