docs: add exclude_patterns in codeclimate config file

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -13,3 +13,13 @@ engines:
     checks:
       Naming/ShortVariable:
         enabled: false
+
+  exclude_patterns:
+    - "**/node_modules/"
+    - "**/test"
+    - "**/tests"
+    - "tests/"
+    - "**/vendor/"
+    - "migrations/"
+    - "diagrams/"
+    - "var/"
