--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,4 @@
-engines:
+plugins:
   phpcodesniffer:
     enabled: true
 
@@ -14,12 +14,12 @@ engines:
       Naming/ShortVariable:
         enabled: false
 
-  exclude_patterns:
-    - "**/node_modules/"
-    - "**/test"
-    - "**/tests"
-    - "tests/"
-    - "**/vendor/"
-    - "migrations/"
-    - "diagrams/"
-    - "var/"
+exclude_patterns:
+  - "**/node_modules/"
+  - "**/test"
+  - "**/tests"
+  - "tests/"
+  - "**/vendor/"
+  - "migrations/"
+  - "diagrams/"
+  - "var/"
