--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fakerphp/faker": "^1.13",
         "symfony/maker-bundle": "^1.29"
     },
     "name": "eredost/bilemo",
