refactor: remove unwanted blank lines at start of control structure and after namespace declaration

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,9 @@
 plugins:
   phpcodesniffer:
     enabled: true
+    checks:
+      Generic Files LineLength TooLong:
+        enabled: false
 
   markdownlint:
     enabled: true
