--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -4,13 +4,14 @@ fos_rest:
     validate: true
     validation_errors_argument: violations
   view:
-    formats: { json: true, xml: false, rss: false }
+    formats: { json: true }
     view_response_listener: true
     mime_types:
       json: [ 'application/json', 'application/json;version=1.0', 'application/json;version=2.0' ]
   serializer:
     serialize_null: true
   format_listener:
+    enabled: true
     rules:
       - { path: '^/', priorities: ['json'], fallback_format: 'json' }
   param_fetcher_listener: force
