--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "^1.13",
+        "symfony/debug-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.29"
     },
     "name": "eredost/bilemo",
