--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "doctrine/orm": "^2.8",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.8",
+        "lexik/jwt-authentication-bundle": "^2.11",
+        "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "5.2.*",
