--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -30,6 +30,9 @@ fos_rest:
       'Symfony\Component\HttpKernel\Exception\NotFoundHttpException': HTTP_NOT_FOUND
       'Symfony\Component\HttpKernel\Exception\MethodNotAllowedHttpException': HTTP_METHOD_NOT_ALLOWED
       'Symfony\Component\HttpKernel\Exception\BadRequestHttpException': HTTP_BAD_REQUEST
+      'Symfony\Component\HttpKernel\Exception\AccessDeniedHttpException': HTTP_FORBIDDEN
       'Exception': HTTP_INTERNAL_SERVER_ERROR
     messages:
+      'App\Exception\ResourceValidationException': true
       'Symfony\Component\HttpKernel\Exception\NotFoundHttpException': true
+      'Symfony\Component\HttpKernel\Exception\AccessDeniedHttpException': true
