--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,6 +32,9 @@ security:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
 
+    access_decision_manager:
+        strategy: unanimous
+        allow_if_all_abstain: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -42,5 +45,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
