--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/serializer": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
-        "symfony/yaml": "5.2.*"
+        "symfony/yaml": "5.2.*",
+        "willdurand/hateoas-bundle": "^2.2"
     },
     "config": {
         "optimize-autoloader": true,
