--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "^1.13",
         "symfony/debug-bundle": "5.2.*",
-        "symfony/maker-bundle": "^1.29"
+        "symfony/maker-bundle": "^1.29",
+        "symfony/phpunit-bridge": "^5.2"
     },
     "name": "eredost/bilemo",
     "description": "API providing the BileMo product catalog"
